--- a/forma_IV/editar.html
+++ b/forma_IV/editar.html
@@ -41,19 +41,27 @@
     <h2 style="color:white;">Estoque de ferramentas</h2>
     <div id="lista"></div>
 
+
+    <!--Inserir Ferramenta-->
+<div class="inserir">
+    <p class="titulo" style="margin-top:1%;">Inserir ferramenta</p>
+    <form action="inserir.php" method="post" enctype="multipart/form-data" style="font-size: 100%;">
+
+        <input type="text" name="nome" placeholder="Nome" required> </br> </br>
+
+        <input type="text" name="tipo" placeholder="Tipo" required> </br></br>
+
+        <input type="text" name="marca" placeholder="Marca" required> </br> </br>
+
+        <label for="imagem" style="color:white;">Escolha a imagem</label>
+        <input type="file" id="imagem" name="foto" accept="imagem/*" style="color:white; font-size: 80%;">
+
+        <input type="submit" value="Enviar"> </br> </br>  </br>
+    </form>
+</div>
+</br></br>
+
 <script>
-    function deletarItem(id, nome) {
-        if (confirm('Tem certeza que deseja excluir a ferramenta?')) {
-
-            fetch("deletar.php?id=${id}")
-                .then(res => res.json())
-                .then(retorno => {
-                    alert(retorno.mensagem);
-                    location.reload(); // Recarrega a página após excluir
-                });
-        }
-    }
-
     fetch("listar.php")
         .then(res => res.json())
         .then(dados => {
@@ -78,6 +86,22 @@
         });
 </script>
 
+<script>
+            function deletarItem(id, nome) {
+        if (confirm('Tem certeza que deseja excluir a ferramenta?')) {
+
+            fetch('deletar.php?id=${id}')
+                .then(res => res.json())
+                .then(retorno => {
+                    alert(retorno.mensagem);
+                    location.reload(); // Recarrega a página após excluir
+                })
+        } else {
+            location.reload();
+        }
+    };
+</script>
+
 <!--CODIGO DE CRIAÇÃO DA TABELA FERRAMENTA -->
 
 <!--
@@ -89,25 +113,6 @@ CREATE TABLE ferramentas (
 );
 -->
 
-
-<!--Inserir Ferramenta-->
-<div class="inserir">
-    <p class="titulo" style="margin-top:1%;">Inserir ferramenta</p>
-    <form action="inserir.php" method="post" enctype="multipart/form-data" style="font-size: 100%;">
-
-        <input type="text" name="nome" placeholder="Nome" required> </br> </br>
-
-        <input type="text" name="tipo" placeholder="Tipo" required> </br></br>
-
-        <input type="text" name="marca" placeholder="Marca" required> </br> </br>
-
-        <label for="imagem" style="color:white;">Escolha a imagem</label>
-        <input type="file" id="imagem" name="foto" accept="imagem/*" style="color:white; font-size: 80%;">
-
-        <input type="submit" value="Enviar"> </br> </br>  </br>
-    </form>
-</div>
-</br></br>
 
 
 <div id="rodape">
