--- a/forma_IV/realotiro.html
+++ b/forma_IV/realotiro.html
@@ -8,6 +8,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <title>Formulário</title>
     <link href="css.css" rel="stylesheet" />
   </head>
@@ -20,26 +22,85 @@
       /></a>
     </div>
 
-    <!--Modal do usuário-->
-    <dialog id="usermodal" style="background-color:#2a2a2a;">
-      <div class="container">
-          <form>
-              <h2>Boa Noite</h2>
-              <input type="text" name="login" placeholder="Login">
-              <input type="password" name="senha" placeholder="Senha"></br>
-              <button type="submit" style="margin-top:2%;">Entrar</button>    
-          </form>
-      </div>
-  </dialog>
+    <!--Relatório-->
+    <div class="container mt-4" style="color:white;">
 
-  <!--Modal de cadastro-->
-  <dialog id="casmodal" style="background-color: #2a2a2a;">
-      <div class="container">
-          <form>
-              <h2>Tudo bem?</h2>
-          </form>
-      </div>
-  </dialog>
+    <h2>📄 Relatório de Ações no Estoque</h2>
+
+    <div id="totais" class="mt-4"></div>
+
+    <h3 class="mt-5">Histórico Completo</h3>
+    <table class="table table-dark table-striped mt-3">
+        <thead>
+            <tr>
+                <th>ID Log</th>
+                <th>ID da Ferramenta</th>
+                <th>Ação</th>
+                <th>Data/Hora</th>
+            </tr>
+        </thead>
+        <tbody id="tabela-logs"></tbody>
+    </table>
+
+    <button id="btnPDF">Exportar relatório em PDF</button>
+
+</div>
+
+  <!--Script para gerar o relatóri-->
+  <script>
+    fetch("relatorio.php")
+        .then(res => res.json())
+        .then(dados => {
+
+            // Totais
+            document.getElementById("totais").innerHTML = `
+                <p><strong>Total de ações:</strong> ${dados.totais.total}</p>
+                <p><strong>Adicionados:</strong> ${dados.totais.adicionados}</p>
+                <p><strong>Removidos:</strong> ${dados.totais.removidos}</p>
+            `;
+
+            // Lista
+            let tabela = "";
+            dados.lista.forEach(l => {
+                tabela += `
+                    <tr>
+                        <td>${l.logfeid}</td>
+                        <td>${l.id}</td>
+                        <td>${l.acao}</td>
+                        <td>${l.feito_em}</td>
+                    </tr>
+                `;
+            });
+
+            document.getElementById("tabela-logs").innerHTML = tabela;
+        });
+</script>
+
+<!--Script para gerar o PDF-->
+  <script>
+document.getElementById("btnPDF").addEventListener("click", function () {
+
+    // Verifica se já tem tabela carregada
+    const tabela = document.querySelector(".table-dark");
+    if (!tabela) {
+        alert("Nenhuma ferramenta foi consultada ainda.");
+        return;
+    }
+
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    doc.text("Relatório de Ferramentas", 14, 15);
+
+    doc.autoTable({
+        html: tabela,
+        startY: 20,
+        theme: 'grid'
+    });
+
+    doc.save("relatorio_ferramentas.pdf");
+});
+</script>
 
     <!--Rodapé-->
     <div id="rodape">
@@ -47,6 +108,10 @@
         <a href="#" style="align-content: center; margin-left: 20%; color:white;">Mais informações</a>
     </div>
     <script src="js.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 </body>
 <script src="js.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 </html>
