--- a/forma_IV/grafico.html
+++ b/forma_IV/grafico.html
@@ -20,10 +20,10 @@
     </div>
 
     <!--Gráfico -->
-    <div>
+    <div style="width: 50%; height: 25%; margin-left:25%;">
       <h2 style="color:white">Logins por dia</h2>
 
-      <canvas id="graficolog" width='400'; height='200'></canvas>
+      <canvas id="graficolog"></canvas>
 
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
       <script>
@@ -42,12 +42,12 @@
           })
         });
       </script>
-    </div></br></br> 
+    </div></br></br> </br></br> 
 
     <!---GRAFICO ferramentas-->
-    <div>
+    <div style="width: 50%; height: 25%; margin-left:25%;">
       <h2 style="color:white">Grafico de ferramentas</h2>
-      <canvas id="graficoferra" width='400'; height='200'></canvas>
+      <canvas id="graficoferra" width='100'; height='50'></canvas>
 
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
       <script>
@@ -78,6 +78,7 @@
           })});
   </script>
 </div>
+</br></br></br>
 
 
     <!--Rodapé-->
