--- a/forma_IV/index.html
+++ b/forma_IV/index.html
@@ -14,7 +14,9 @@
         <!--Logo + link-->
         <a href="index.html"><img src="simbolo.png" style="width: 6.8%; margin-right: 89%;"></a>
         <!--Login-->
-        <p style="width: 5%; margin-left:85%; margin-top:-2%; font-size: 120%; color: white;" id="userbutton">Entrar</p>
+        <p style="width: 5%; margin-left:80%; margin-top:-2%; font-size: 120%; color: white;" id="userbutton">Entrar</p>
+        <!--Logout-->
+        <p onclick="window.location.href='logout.php'" style="color:white; margin-top: -2.8%; font-size:120%; margin-left: 76%;">Logout</p>
         <!--Cadastro-->
         <P id="casbutton" style="color:white; margin-top: -2.7%; margin-left: 90%; font-size: 120%;"> Cadastrar-se</P>
     </div>
